# 0.00.43 (72628) Mar 27, 2013
3/27/13 Deploy to dev for review by the design team.
Made the "Energy Chunks" checkbox larger on the first tab.
Changed the background color for the control panels on the first tab.
Adjusted energy chunks mapping algorithms and some of the model object parameters such that all objects will receive an energy chunk after a small amount of heating.
Fixed an issue where energy chunks could, in some cases, appear to get stuck on the outside of a container.
Removed code that was previously used to make energy chunks fade in and out, since it is no longer used.
Removed a number of images that are no longer used.  This should reduce file size.
Fixed a problem where all tool tips associated with the time control panel were popping up in the wrong places.  Did this by disabling tool tips.
Added a feature where thermometers are automatically moved if the user drops a block behind them while they are sensing the beaker temperature.
Made the burner that heats the tea pot not snap to zero when released.
Fixed an issue with grabbing the bottom of the beaker when it is stacked on top of a block.
Internationalized the strings.
Put carousels on 2nd tab on separate clock so that they still operate when tab is paused.
Made reset un-pause the clock if paused.  Both tabs.
Added and incorporated new images for light bulbs.
# 0.00.41 (72581) Mar 21, 2013
3/21/13 Version with fix for thermometer bug
# 0.00.40 (72577) Mar 21, 2013
3/21/13 Deploy to dev for interviews.
Changed the way that thermometers work so that they appear to jump a little when the user clicks on them in the tool box.
Increased speed of free energy chunks on the first tab.
# 0.00.39 (72574) Mar 21, 2013
3/21/13 Publish to dev for review and interviews.
Fixed an issue where clicking on the thermometers in the tool box could make them appear to vanish.
Made the light bulbs occasionally radiate a thermal energy chunk.  Incandescent bulb radiates more of them than fluorescent.